added acknowledgements in, added chapter 9 to abstract and linked findings back to aims in the discussion chapter

--- a/index/00-abstract.Rmd
+++ b/index/00-abstract.Rmd
@@ -16,3 +16,5 @@ As circulating proteins were shown to activate platelets, the effect of BMI on t
 A weight loss randomized control trial (RCT) called DiRECT was also implemented to evaluate the effect of BMI on the plasma proteome (N=146) in **Chapter \@ref(BMI-protein-RCT)**. Participants had their BMI and plasma proteome measured by SomaLogic at baseline and after one year of Type 2 Diabetes guideline care (control) or a total diet replacement (TDR) (intervention). Linear regression was used to explore effects as well as an instrumental variable analysis, using the treatment group as an instrument for BMI change. A reduction in BMI had a broad effect on the plasma proteome: proteomic changes were enriched for metabolic disease.
 
 The final results chapter **(Chapter \@ref(Comparison-proteome))** combined the results of the two previous chapters in attempt to identify consistent and divergent proteomic features across MR and weight loss RCT study designs. This chapter indicated that proteins which are altered with higher BMI can be reversed with a reduction in BMI through an intervention. There was evidence that BMI affects levels of proteins which may be indicative of a change in platelet function.
+
+Finally, **Chapter \@ref(Discussion)** brings together the findings from the thesis and discusses how they relate back to the aims. The strengths and limitations of the work, the wider implications of the findings and future studies are also discussed. 
