--- a/index/04-chap4.Rmd
+++ b/index/04-chap4.Rmd
@@ -204,7 +204,7 @@ This chapter explored the effect of obesity on platelet parameters and platelet 
 
 This study did not detect differences in platelet characteristics such as IPC when comparing the high BMI bariatric surgery group with the control group. The small sample size and large standard deviation in the high BMI group would explain why the BMI and IPC association detected in Chapter \@ref(BMI-platelets-INTERVAL) was not detected in the current study. There was also no evidence for a difference in levels of platelet receptors under basal conditions. A difference in P-selectin expression in response to agonists across the bariatric patient and control group was not detected, however, there was weak evidence that activation of the integrin α~IIb~β~3~ was impaired in the bariatric patient group. This reduction is modest so it is unclear whether this would impact the ability of platelets to aggregate. A previous study (unpublished) from the Hers group and published data from other groups[@Taus2020] indicated that in severe COVID-19 there is a large reduction (~60% reduction) in platelet integrin α~IIb~β~3~ activation, but an increase in the percentage of platelets bound to neutrophils therefore suggesting there is hyperactivity. It is therefore possible that impaired integrin activation may be a marker of platelet hyperactivity. A similar reduction in integrin α~IIb~β~3~ activation was reported in platelets from patients with myeloproliferative disorders who also have a prothrombotic phenotype[@Moore2013]. In the current study there a small reduction in integrin α~IIb~β~3~ activation (~10% reduction in the bariatric surgery group in response to ADP). Replication in a larger sample size is important to further characterise differences integrin α~IIb~β~3~ activation.
 
-One previous study detected an increase in GPVI receptor levels and GPVI mediated platelet aggregation[@Barrachina2019]. Despite this previous finding, Barrachina et al. did not directly measure activation of the integrin α~IIb~β~3~, so it is unclear how this increase in expression would translate to the activation of this integrin. A larger sample size would be required to be able to draw conclusions here. As well as this, aggregation experiments would have also been useful to compare platelet function across groups, however this technique was not chosen due to time restraints and large amount of sample required.
+One previous study detected an increase in GPVI receptor levels and GPVI mediated platelet aggregation[@Barrachina2019] with higher BMI. Despite this previous finding, Barrachina et al. did not directly measure activation of the integrin α~IIb~β~3~, so it is unclear how this increase in expression would translate to the activation of this integrin. A larger sample size would be required to be able to draw conclusions here. As well as this, aggregation experiments would have also been useful to compare platelet function across groups, however this technique was not chosen due to time restraints and large amount of sample required.
 
 The principal component analysis of the proteomic data suggested that PC4 was able to separate the bariatric and control groups. Although PC4 was not the main source of variance, even with a small N number, this provided evidence that the group (bariatric/control) could explain variation in proteins. Therefore, some protein signatures may be due to the difference in BMI. However, it could also be due to other factors which differed across groups such as previous COVID-19 infection or T2D diagnosis. COVID-19 infection can cause venous thromboembolism and is more likely to occur in people with obesity[@McFadyen2020; @Klok2020; @Wang2021]. Therefore, it is possible that the COVID-19 infection in the bariatric patients may cause longer-term changes in platelet activity and confound results. Despite this, concordance with previous studies in terms of proteins reportedly altered with BMI also suggests that the current study is likely capturing platelet protein signatures of obesity. Table \@ref(tab:proteome-lit) shows the results that have replicated in the current study when comparing to three previous studies that have studied the platelet proteome[@Barrachina2019], platelet microvesicle proteome[@Grande2019] and platelet transcriptome in relation to obesity[@Freedman2010]. 
 
