--- a/index/05-chap5.Rmd
+++ b/index/05-chap5.Rmd
@@ -60,7 +60,7 @@ include_graphics(path = "figure/Chemokines/Thesis_graphic_overview_chemokines.pn
 Materials used for the current chapter are listed in section \@ref(materials).
 
 ### Isolation of human platelets
-Fresh human venous blood was obtained from healthy volunteers by venipuncture. Blood was taken into the syringe with a 1 in 10 volume of 4 % trisodium citrate, then mixed with a 1 in 7 volume of acid citrate dextrose (ACD). Blood was placed into 5 mL LP4 tubes then centrifuged at 1000 revolutions per minute (RPM) for 17 minutes. Platelet rich plasma (PRP) was removed. PRP was supplemented with inhibitors such as 0.02 U/mL apyrase, 140 nM PGE1 or 10 µM indomethacin. Supplemented PRP was either used for the experiment or centrifuged for a further 10 minutes at 1700 RPM. Platelet poor plasma (PPP) was removed leaving a platelet pellet. This pellet was resuspended in HEPES Tyrode’s (supplemented with 0.1 % glucose and 0.02 U/mL apyrase, and 10 µM indomethacin if already applied to PRP). Platelets were counted using a Z1 coulter particle counter by diluting 1 in 2000 in 10 mL MQ water. Platelets were diluted further using the supplemented HEPES Tyrode’s to a platelet concentration of 4 x 10^8^/mL and left to rest for 30 mins in a 30°C water bath.
+This study was approved by the local ethics committee. Fresh human venous blood was obtained from healthy volunteers by venipuncture in accordance with the Declaration of Helsinki. All participants provided written informed consent. Participants confirmed they had not taken any antiplatelet medications such as NSAIDs in the 14 days prior to donation. Blood was taken into the syringe with a 1 in 10 volume of 4 % trisodium citrate, then mixed with a 1 in 7 volume of acid citrate dextrose (ACD). Blood was placed into 5 mL LP4 tubes then centrifuged at 1000 revolutions per minute (RPM) for 17 minutes. Platelet rich plasma (PRP) was removed. PRP was supplemented with inhibitors such as 0.02 U/mL apyrase, 140 nM PGE1 or 10 µM indomethacin. Supplemented PRP was either used for the experiment or centrifuged for a further 10 minutes at 1700 RPM. Platelet poor plasma (PPP) was removed leaving a platelet pellet. This pellet was resuspended in HEPES Tyrode’s (supplemented with 0.1 % glucose and 0.02 U/mL apyrase, and 10 µM indomethacin if already applied to PRP). Platelets were counted using a Z1 coulter particle counter by diluting 1 in 2000 in 10 mL MQ water. Platelets were diluted further using the supplemented HEPES Tyrode’s to a platelet concentration of 4 x 10^8^/mL and left to rest for 30 mins in a 30°C water bath.
 
 ### Integrin α~IIb~β~3~ activation and P-selectin expression measured by flow cytometry
 Washed platelets were diluted to a concentration of 2 x 10^7^/mL using supplemented HEPES Tyrode’s buffer with FITC-conjugated PAC1 and PE-conjugated CD62P antibodies in a 2:1 ratio, where PAC1 was present at a 1:10 volume and CD62P at 1:20. Platelets were incubated with 200 ng/ml MDC, TARC or vehicle for 5 mins followed by stimulation with increasing concentrations of PAR1-AP for 10 minutes. Platelets were fixed with a final concentration of 1 % paraformaldehyde (PFA) for 10 minutes. Plates were analysed using the BD Accuri C6 Plus flow cytometer (BD Biosciences, Wokingham, UK), where the median fluorescence intensity was derived from 10,000 gated platelets. 
@@ -98,7 +98,7 @@ To investigate the effect of MDC and TARC on agonist-induced platelet aggregatio
 
 (ref:scaption3a) The priming effect of the chemokines MDC and TARC on PAR1-AP induced platelet aggregation in washed platelets
 (ref:caption3a) **The priming effect of the chemokines MDC and TARC on PAR1-AP induced platelet aggregation in washed platelets**. Washed platelets at 2x10^8^/mL supplemented with apyrase were preincubated with MDC or TARC (5 min) before application of PAR1-AP-induced aggregation (5 mins). A) Raw aggregation trace comparing the effect of vehicle, 200 ng/mL MDC or 200 ng/mL TARC on PAR1-AP induced aggregation. B) Bar chart comparing the maximum PAR1-AP-mediated aggregation reached in the presence of vehicle, MDC or TARC. C) Bar chart comparing the area under the curve of PAR1-AP mediated aggregation trace in the presence of vehicle, MDC or TARC. Results analysed with a repeated measures one-way ANOVA with Dunnett’s multiple comparisons. N=7. Mean+SEM displayed.
-```{r MDC-TARC-agg, echo = FALSE, out.width="85%", fig.cap="(ref:caption3a)", fig.align = "center", fig.scap= "(ref:scaption3a)"}
+```{r MDC-TARC-agg, echo = FALSE, out.width="95%", fig.cap="(ref:caption3a)", fig.align = "center", fig.scap= "(ref:scaption3a)"}
 include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_aggregation_PAR1.pdf", dpi = NA)
 
 ```
@@ -116,11 +116,11 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_PRP_plate_agg.pdf", 
 
 ### Priming effects of MDC and TARC on PAR1-AP induced integrin α~IIb~β~3~ activation and P-selectin expression
 
-When a platelet becomes activated by an agonist, the integrin α~IIb~β~3~ changes confirmation and is activated on the membrane of the platelet. This allows fibrinogen to bind and aggregation to occur. Following platelet activation, alpha granules fuse with the platelet plasma membrane and P-selectin becomes expressed on the plasma membrane. To assess whether MDC and TARC affect integrin α~IIb~β~3~ activation and P-selectin expression, washed platelets were incubated with vehicle, 200 ng/ml MDC or TARC prior to PAR-AP stimulation. MDC enhanced integrin α~IIb~β~3~ activation, with a leftward shift in the PAR1-AP concentration response curve (pEC50= -5.54 M (SEM 0.10 M) to -5.66 M (SEM 0.08 M), p=0.02). Preincubation with TARC had the same effect as MDC, left shifting the concentration-response curve (pEC50 = -5.54 M (SEM 0.11 M) to -5.64 M (SEM 0.11 M), p=0.01, Figure \@ref(fig:MDC-TARC-integrin-pselectin)A). MDC and TARC did not cause a significant increase in the maximal integrin activation. As the concentration of PAR1-AP applied to the platelets gets higher, more P-selectin was exposed and therefore there was an increase in the MFI. The pEC50 for the PAR1-AP effect on P-selectin expression was -5.36 (SEM 0.07) (Figure \@ref(fig:MDC-TARC-integrin-pselectin)B). Preincubation with 200 ng/ml MDC caused a small leftward shift in pEC50 to -5.44 (SEM 0.07) (MDC v vehicle, p=0.006), but preincubation with 200 ng/ml TARC did not alter the sensitivity to PAR1-AP. Together these results show that MDC and TARC are able to potentiate platelet activation mainly through integrin α~IIb~β~3~. In the absence of PAR1-AP, both MDC and TARC had a weak effect on integrin α~IIb~β~3~ activation: increasing basal levels from a median fluorescence intensity (MFI) of 161 (SEM 20) to 222 (SEM 27) (vehicle v MDC, p=0.006) and to 285 ± 36 (vehicle v TARC, p=0.007) respectively (Figure \@ref(fig:MDC-TARC-integrin-pselectin)C). This effect was specific to integrin α~IIb~β~3~ as it was not seen with P-selectin.
+When a platelet becomes activated by an agonist, the integrin α~IIb~β~3~ changes conformation and is activated on the membrane of the platelet. This allows fibrinogen to bind and for platelet aggregation to occur. Following platelet activation, alpha granules fuse with the platelet plasma membrane and P-selectin becomes expressed on the plasma membrane. To assess whether MDC and TARC affect integrin α~IIb~β~3~ activation and P-selectin expression, washed platelets were incubated with vehicle, 200 ng/ml MDC or TARC prior to PAR-AP stimulation. MDC enhanced integrin α~IIb~β~3~ activation, with a leftward shift in the PAR1-AP concentration response curve (pEC50= -5.54 M (SEM 0.10 M) to -5.66 M (SEM 0.08 M), p=0.02). Preincubation with TARC had the same effect as MDC, left shifting the concentration-response curve (pEC50 = -5.54 M (SEM 0.11 M) to -5.64 M (SEM 0.11 M), p=0.01, Figure \@ref(fig:MDC-TARC-integrin-pselectin)A). MDC and TARC did not affect maximal integrin activation. As the concentration of PAR1-AP applied to the platelets gets higher, more P-selectin was exposed and therefore there was an increase in the MFI. The pEC50 for the PAR1-AP effect on P-selectin expression was -5.36 (SEM 0.07) (Figure \@ref(fig:MDC-TARC-integrin-pselectin)B). Preincubation with 200 ng/ml MDC caused a small leftward shift in pEC50 to -5.44 (SEM 0.07) (MDC v vehicle, p=0.006), but preincubation with 200 ng/ml TARC did not alter the sensitivity to PAR1-AP. Together these results show that MDC and TARC are able to potentiate platelet activation mainly through integrin α~IIb~β~3~. In the absence of PAR1-AP, both MDC and TARC potentiated integrin α~IIb~β~3~ activation: increasing basal levels from a median fluorescence intensity (MFI) of 161 (SEM 20) to 222 (SEM 27) (vehicle v MDC, p=0.006) and to 285 ± 36 (vehicle v TARC, p=0.007) respectively (Figure \@ref(fig:MDC-TARC-integrin-pselectin)C). This effect was specific to integrin α~IIb~β~3~ as it was not seen with P-selectin.
 
 (ref:scaption3) The priming effect of the chemokines MDC and TARC on PAR1-AP induced α~IIb~β~3~ activation and P-selectin expression
 (ref:caption3) **The priming effect of the chemokines MDC and TARC on PAR1-AP induced α~IIb~β~3~ activation and P-selectin expression.** Washed platelets at 2x10^7^/mL supplemented with apyrase were preincubated with MDC or TARC (5 mins) before application of PAR1-AP (5 mins). Integrin α~IIb~β~3~ activation and P-selectin expression were measured using flow cytometry. A) The effect of vehicle, 200 ng/mL MDC or 200 ng/mL TARC on PAR1-AP induced α~IIb~β~3~ activation measured as the median fluorescence intensity (AU). B) The effect of vehicle, MDC or TARC on PAR1-AP induced P-selectin expression measured using median fluorescence intensity (AU). pEC50s compared using a one-way ANOVA with Dunnett's multiple comparisons in Table \@ref(tab:chemokines-integrin-pselectin) C) MDC and TARC alone increase integrin α~IIb~β~3~ activation. Mean + SEM displayed. N=4.
-```{r MDC-TARC-integrin-pselectin, echo = FALSE, out.width="70%", fig.cap="(ref:caption3)", fig.align = "center", fig.scap= "(ref:scaption3)"}
+```{r MDC-TARC-integrin-pselectin, echo = FALSE, out.width="80%", fig.cap="(ref:caption3)", fig.align = "center", fig.scap= "(ref:scaption3)"}
 include_graphics(path = "figure/Chemokines/Layouts/P-selectin_integrin_MDC_TARC.pdf", dpi = NA)
 
 ```
@@ -146,7 +146,7 @@ mytable %>% kable(caption = "(ref:caption-chemokines-integrin-pselectin)", forma
 
 ### Effects of MDC and TARC on PS exposure
 
-When a platelet is activated by strong agonists, such as dual stimulation by collagen-related peptide (CRP) and thrombin, PS is translocated from the inner platelet membrane to the outer, thereby facilitating coagulation by providing binding sites for prothrombinase complex and supporting thrombin generation[@Reddy2020]. MDC and TARC did not affect the overall percentage of annexin V positive platelets induced by CRP and thrombin (Figure \@ref(fig:MDC-TARC-PS-exposure)).
+When a platelet is activated by strong agonists, such as dual stimulation by collagen-related peptide (CRP) and thrombin, PS is translocated from the inner platelet membrane to the outer, thereby facilitating coagulation by providing binding sites for prothrombinase complex and supporting thrombin generation[@Reddy2020]. Annexin V is a protein which binds with high affinity to PS and can be used to measure the proportion of platelets which are PS positive. MDC and TARC did not affect the overall percentage of annexin V positive platelets induced by CRP and thrombin (Figure \@ref(fig:MDC-TARC-PS-exposure)).
 
 (ref:scaption4) The effect of the chemokines MDC and TARC on agonist induced PS exposure
 (ref:caption4) **The effect of the chemokines MDC and TARC on agonist induced PS exposure**. A) Washed platelets at 2x10^7^/mL supplemented with indomethacin and apyrase were preincubated with vehicle, 200ng/mL MDC or 200 ng/mL TARC (5 mins) before application of CRP and increasing concentrations of thrombin (10 mins). PS exposure was measured using flow cytometry (N=4). B) Bar chart comparing the effect of vehicle, MDC or TARC on the pEC50s (M) of thrombin induced PS exposure. pEC50s were compared by a Friedman's test.
@@ -161,7 +161,7 @@ MDC and TARC were applied to washed platelets to determine whether they exert ef
 
 (ref:scaption8) The effect of the chemokines MDC and TARC alone on aggregation in washed platelets
 (ref:caption8) **The effect of the chemokines MDC and TARC alone on aggregation in washed platelets**. A-C) Washed platelets at 2x10^8^/mL supplemented with  apyrase were stimulated with vehicle, 200ng/mL MDC, 200 ng/mL TARC or 1 uM PAR1-AP (5 mins). Aggregation was measured using light transmission aggregometry. Each graph is a representative trace from a separate donor
-```{r MDC-TARC-wp-alone-aggregation, out.width="90%", echo = FALSE, fig.cap="(ref:caption8)", fig.align = "center", fig.scap= "(ref:scaption8)"}
+```{r MDC-TARC-wp-alone-aggregation, out.width="100%", echo = FALSE, fig.cap="(ref:caption8)", fig.align = "center", fig.scap= "(ref:scaption8)"}
 include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_alone_wp_aggregation.pdf", dpi = NA)
 
 ```
@@ -205,7 +205,7 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_VASP_FACS_logec50.pd
 
 ### Mechanisms of the effect of MDC on platelet aggregation in PRP
 
-The mechanism by which these chemokines cause platelet aggregation in PRP was further characterised just using MDC. MDC-induced platelet aggregation was explored using various inhibitors. To test that the antagonists used were specific, they were first applied to PAR1-AP. As expected, the CCR4 antagonist AZD-2098 did not affect PAR1-AP platelet aggregation. The G~q~ inhibitor YM-254890 inhibited PAR1-AP induced platelet aggregation (Figures \@ref(fig:MDC-PRP-agg-bar)A, B). Y27632 inhibited the G~12/13~ mediated shape change induced by low concentrations of PAR1-AP (0.75 uM) due inhibiting rho-associated protein kinase (ROCK) (data not shown). 
+The mechanism by which these chemokines cause platelet aggregation in PRP was further characterised just using MDC. MDC-induced platelet aggregation was explored using various inhibitors. To test that the antagonists used were specific, they were first applied to PAR1-AP. As expected, the CCR4 antagonist AZD-2098 did not affect PAR1-AP platelet aggregation. The G~q~ inhibitor YM-254890 inhibited PAR1-AP induced platelet aggregation (Figures \@ref(fig:MDC-PRP-agg-bar)A, B). Y27632 inhibited the G~12/13~ mediated shape change induced by low concentrations of PAR1-AP (0.75 uM) due to inhibiting rho-associated protein kinase (ROCK) (data not shown). 
 
 The effects of these inhibitors on MDC-induced aggregation were then explored. MDC by itself was able to consistently cause over 60% aggregation in PRP. The CCR4 inhibitor AZD-2098 was able to reduce this aggregation, but only at 50 uM (Figures \@ref(fig:MDC-PRP-agg-bar)C, \@ref(fig:MDC-PRP-agg-trace)A, B). The G~q~ inhibitor YM-254890 was able to reduce the maximum aggregation induced by MDC (Figure \@ref(fig:MDC-PRP-agg-bar)C, Figure \@ref(fig:MDC-PRP-agg-trace)C), suggesting CCR4 couples to G~q~. Y27632 did not affect aggregation induced by MDC, suggesting that this aggregation is not dependent on G~12/13~ and ROCK (Figure \@ref(fig:MDC-PRP-agg-bar)D, \@ref(fig:MDC-PRP-agg-trace)D). Application of MDC to PRP did not cause shape change.
 
