--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -32,7 +32,7 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 # Discussion {#Discussion}
 
 ## Summary of findings
-The work presented in this thesis brought together an interdisciplinary approach to expand on previous literature to further explore the contribution of platelet function and the plasma proteome to obesity-related CVD (Figure \@ref(fig:Thesis-schematic-chaps)). The results and limitations from each individual results chapter have been discussed in the relevant chapters. This discussion chapter will recap the main findings from the thesis, address the overall strengths and limitations, discuss the wider clinical implications of findings as well as suggest future research to expand on this area of research.
+The work presented in this thesis brought together an interdisciplinary approach to expand on previous literature to further explore the contribution of platelet function and the plasma proteome to obesity-related CVD (Figure \@ref(fig:Thesis-schematic-chaps)). The results and limitations from each individual results chapter have been discussed in the relevant chapters. This discussion chapter will recap the main findings from the thesis and relate these findings back to the overall aims of the thesis. It will also address the overall strengths and limitations, discuss the wider clinical implications of findings as well as suggest future research to expand on this area of research.
 
 (ref:caption-Thesis-schematic-chaps) **Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored.** Figure made using BioRender.com.
 (ref:scaption-Thesis-schematic-chaps) Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored
@@ -40,7 +40,7 @@ The work presented in this thesis brought together an interdisciplinary approach
 include_graphics(path = "figure/General_discussion/Thesis_graphic_overview_chapters.png", dpi = NA)
 ```
 
-A summary of the main findings of the thesis is provided in Table \@ref(tab:main-thesis-findings). This thesis started with exploring the effect of BMI on platelet traits within a cohort of UK blood donors (INTERVAL) (Chapter \@ref(BMI-platelets-INTERVAL)). This chapter provided evidence, using both observational and MR analyses, that higher BMI increases IPC. As INTERVAL did not have measures of platelet function, associations between IPC and whole blood platelet aggregation were explored with a cardiac surgery cohort (COPTIC). Here IPC and platelet aggregation were positively associated, independent of the overall platelet count. The next chapter (Chapter \@ref(BMI-platelets-clinic)) sought to determine the effect of BMI on more detailed readouts of platelet function by designing a patient study, recruiting patients who were due to undergo bariatric surgery. Here, alterations in the platelet proteome were found which may have implications for platelet function and signalling. Follow-up experiments using other platelet function techniques, with a larger sample size, are now required. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised as a result of obesity-induced inflammation. MDC and TARC were found to potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. There was MR evidence that higher levels of MDC could contribute to DVT and PE. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. Chapter \@ref(Comparison-proteome) brought together these study designs to identify consistent evidence for BMI effects on proteins. These analyses pointed towards proteins which may be important in obesity-related CVD such as SHBG, fumarylacetoacetase and IGFBP1/2. Specific analysis of the effect of BMI on plasma proteins involved in platelet proteins also implicated proteins such as PAFAH which is altered by BMI and may lead to platelet hyperactivity. 
+A summary of the main findings of the thesis is provided in Table \@ref(tab:main-thesis-findings). The first sub-aim was to determine the effect of BMI on platelet traits as well as platelet function and sigalling. This thesis started with exploring the effect of BMI on platelet traits within a cohort of UK blood donors (INTERVAL) (Chapter \@ref(BMI-platelets-INTERVAL)). This chapter provided evidence, using both observational and MR analyses, that higher BMI increases IPC. As INTERVAL did not have measures of platelet function, associations between IPC and whole blood platelet aggregation were explored with a cardiac surgery cohort (COPTIC). Here IPC and platelet aggregation were positively associated, independent of the overall platelet count. The next chapter (Chapter \@ref(BMI-platelets-clinic)) sought to determine the effect of BMI on more detailed readouts of platelet function by designing a patient study, recruiting patients who were due to undergo bariatric surgery. Here, alterations in the platelet proteome were found which may have implications for platelet function and signalling. Follow-up experiments using other platelet function techniques, with a larger sample size, are now required.
 
 (ref:caption-main-thesis-findings) Summary of main findings from the thesis
 ```{r main-thesis-findings,  echo=FALSE, warning=FALSE}
@@ -57,6 +57,10 @@ column_spec(2, width = "12cm") %>%
   column_spec(1, width = "4cm") 
  ## landscape()
 ```
+
+The second sub-aim was to characterise the effects of the chemokines macrophage-derived chemokine (MDC) and thymus and activation regulated chemokine (TARC) on platelet function. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised as a result of obesity-induced inflammation. MDC and TARC were found to potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. There was MR evidence that higher levels of MDC could contribute to DVT and PE. 
+
+The final aim of the thesis was to determine the effects of adiposity on the plasma proteome and the potential contribution to platelet function. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. Chapter \@ref(Comparison-proteome) brought together these study designs to identify consistent evidence for BMI effects on proteins. These analyses pointed towards proteins which may be important in obesity-related CVD such as SHBG, fumarylacetoacetase and IGFBP1/2. Specific analysis of the effect of BMI on plasma proteins involved in platelet proteins also implicated proteins such as PAFAH which is altered by BMI and may lead to platelet hyperactivity. 
 
 ## Strengths 
 As previously mentioned, this thesis has approached hypotheses using a range of study designs. Integrating clinical studies, basic science, cohort studies and trial data has been crucial to further understand the role of BMI in platelet function. This is therefore a strength of the current research. One of the major benefits of these techniques are that they are in line with the principles of the 3Rs (replacement, reduction and refinement). The thesis has made use of available human data from various cohorts to avoid use of animals in research (replacement).
