--- a/index/00-acknowledgements.Rmd
+++ b/index/00-acknowledgements.Rmd
@@ -3,3 +3,20 @@ body {
 text-align: justify}
 </style>
 
+First of all, I would like to say a huge thanks to my supervisors Inge and Nic for their guidance and advice throughout my PhD. I have felt supported when I have needed it, but also feel like I have been given the independence and academic freedom, which I will take forward into my career. I am excited to continue working with you during the Transition Fellowship.
+
+It goes without saying that this work would not have been possible without the British Heart Foundation Integrative Cardiovascular Science PhD programme, along with the funding I received from the University of Bristol alumni. I am very grateful for all the training and opportunities I've received as part of this programme. I have also greatly enjoyed the sense of community within this programme.
+
+Thank you to all the (past and present) members of Bristol Platelet Group who have helped me out in the lab so willingly - Samantha Moore, Tony Walsh, Chris Williams, Kamila Sledz, Lawrence Hutchinson, Kate Burley and Elizabeth Aitken among others. 
+
+Thank you also to Team Timpson members who have been so encouraging and supportive especially in the early stages of my PhD - it was a tough transition as I started this PhD with no experience of epidemiology. I would like to thank David Hughes in particular for being the one who taught me R and kept me away from Stata! Other people who have helped massively include Laura Corbin, Caroline Bull, Kaitlin Wade, Emma Vincent.
+
+Matt Lee - thanks for gently pressuring me into using R Markdown to write my thesis and for being there to fix it when I couldn't! 
+
+The collaborations and analyses wouldn't have been possible without these amazing people helping me out - Nicole Soranzo, Klaudia Walter, Adam Butterworth, Andrew Mumford, Dimitri Pournaras, Naveed Sattar, Michael Holmes.
+
+I would also like to thank my family and friends for their support throughout my PhD. Thank you to my mum for being so amazing. I would definitely not have got this far without your support throughout my education. I also appreciate the effort to read the abstracts even if you're not sure what they mean. Thank you also to my Dad, my brother Mark and sister Jenna for all their encouragement. 
+
+To my flat mates of 3.5 years, Tessa and Josie, thanks for the support and motivation to keep going, especially in each lockdown when all we saw was each other. I couldn't have spent the time with anyone better.
+
+And lastly, thank you to my boyfriend Harry. Whether it be sending gifts for abstracts being accepted, printing out my first publication into a booklet or just offering words of encouragement, you have been a rock through it all! 
